# serializer version: 1
# name: test_device_tree[aeotec_zwa046]
  dict({
    '3245146787-39': dict({
      'children': dict({
      }),
      'entities': dict({
        'button.home_energy_meter_8_identify': 'Identify',
        'button.home_energy_meter_8_ping': 'Ping',
        'button.home_energy_meter_8_reset_accumulated_values': 'Reset accumulated values',
        'button.home_energy_meter_8_reset_accumulated_values_10': 'Reset accumulated values (10)',
        'button.home_energy_meter_8_reset_accumulated_values_2': 'Reset accumulated values (2)',
        'button.home_energy_meter_8_reset_accumulated_values_3': 'Reset accumulated values (3)',
        'button.home_energy_meter_8_reset_accumulated_values_4': 'Reset accumulated values (4)',
        'button.home_energy_meter_8_reset_accumulated_values_5': 'Reset accumulated values (5)',
        'button.home_energy_meter_8_reset_accumulated_values_6': 'Reset accumulated values (6)',
        'button.home_energy_meter_8_reset_accumulated_values_7': 'Reset accumulated values (7)',
        'button.home_energy_meter_8_reset_accumulated_values_8': 'Reset accumulated values (8)',
        'button.home_energy_meter_8_reset_accumulated_values_9': 'Reset accumulated values (9)',
        'button.home_energy_meter_8_reset_electric_consumption_kvah': 'Reset Electric Consumption [kVAh]',
        'button.home_energy_meter_8_reset_electric_consumption_kvah_3': 'Reset Electric Consumption [kVAh] (3)',
        'button.home_energy_meter_8_reset_electric_consumption_kvah_5': 'Reset Electric Consumption [kVAh] (5)',
        'button.home_energy_meter_8_reset_electric_consumption_kvah_7': 'Reset Electric Consumption [kVAh] (7)',
        'button.home_energy_meter_8_reset_electric_consumption_kvarh': 'Reset Electric Consumption [kVarh]',
        'button.home_energy_meter_8_reset_electric_consumption_kvarh_3': 'Reset Electric Consumption [kVarh] (3)',
        'button.home_energy_meter_8_reset_electric_consumption_kvarh_5': 'Reset Electric Consumption [kVarh] (5)',
        'button.home_energy_meter_8_reset_electric_consumption_kvarh_7': 'Reset Electric Consumption [kVarh] (7)',
        'button.home_energy_meter_8_reset_electric_consumption_kwh': 'Reset Electric Consumption [kWh]',
        'button.home_energy_meter_8_reset_electric_consumption_kwh_3': 'Reset Electric Consumption [kWh] (3)',
        'button.home_energy_meter_8_reset_electric_consumption_kwh_5': 'Reset Electric Consumption [kWh] (5)',
        'button.home_energy_meter_8_reset_electric_consumption_kwh_7': 'Reset Electric Consumption [kWh] (7)',
        'button.home_energy_meter_8_reset_electric_consumption_kwh_9': 'Reset Electric Consumption [kWh] (9)',
        'button.home_energy_meter_8_reset_electric_production_kvah': 'Reset Electric Production [kVAh]',
        'button.home_energy_meter_8_reset_electric_production_kvah_4': 'Reset Electric Production [kVAh] (4)',
        'button.home_energy_meter_8_reset_electric_production_kvah_6': 'Reset Electric Production [kVAh] (6)',
        'button.home_energy_meter_8_reset_electric_production_kvah_8': 'Reset Electric Production [kVAh] (8)',
        'button.home_energy_meter_8_reset_electric_production_kvarh': 'Reset Electric Production [kVarh]',
        'button.home_energy_meter_8_reset_electric_production_kvarh_4': 'Reset Electric Production [kVarh] (4)',
        'button.home_energy_meter_8_reset_electric_production_kvarh_6': 'Reset Electric Production [kVarh] (6)',
        'button.home_energy_meter_8_reset_electric_production_kvarh_8': 'Reset Electric Production [kVarh] (8)',
        'button.home_energy_meter_8_reset_electric_production_kwh': 'Reset Electric Production [kWh]',
        'button.home_energy_meter_8_reset_electric_production_kwh_10': 'Reset Electric Production [kWh] (10)',
        'button.home_energy_meter_8_reset_electric_production_kwh_4': 'Reset Electric Production [kWh] (4)',
        'button.home_energy_meter_8_reset_electric_production_kwh_6': 'Reset Electric Production [kWh] (6)',
        'button.home_energy_meter_8_reset_electric_production_kwh_8': 'Reset Electric Production [kWh] (8)',
        'number.home_energy_meter_8_automatic_reporting_interval_group_1_export': 'Automatic Reporting Interval: Group 1 (Export)',
        'number.home_energy_meter_8_automatic_reporting_interval_group_1_import': 'Automatic Reporting Interval: Group 1 (Import)',
        'number.home_energy_meter_8_automatic_reporting_interval_group_2_export': 'Automatic Reporting Interval: Group 2 (Export)',
        'number.home_energy_meter_8_automatic_reporting_interval_group_2_import': 'Automatic Reporting Interval: Group 2 (Import)',
        'number.home_energy_meter_8_automatic_reporting_interval_group_3_export': 'Automatic Reporting Interval: Group 3 (Export)',
        'number.home_energy_meter_8_automatic_reporting_interval_group_3_import': 'Automatic Reporting Interval: Group 3 (Import)',
        'number.home_energy_meter_8_indicator_value': 'Indicator value',
        'number.home_energy_meter_8_power_change_threshold_clamp_1_export': 'Power Change Threshold (Clamp 1 Export)',
        'number.home_energy_meter_8_power_change_threshold_clamp_1_import': 'Power Change Threshold (Clamp 1 Import)',
        'number.home_energy_meter_8_power_change_threshold_clamp_2_export': 'Power Change Threshold (Clamp 2 Export)',
        'number.home_energy_meter_8_power_change_threshold_clamp_2_import': 'Power Change Threshold (Clamp 2 Import)',
        'number.home_energy_meter_8_power_change_threshold_clamp_3_export': 'Power Change Threshold (Clamp 3 Export)',
        'number.home_energy_meter_8_power_change_threshold_clamp_3_import': 'Power Change Threshold (Clamp 3 Import)',
        'number.home_energy_meter_8_power_change_threshold_whole_hem_export': 'Power Change Threshold (Whole HEM Export)',
        'number.home_energy_meter_8_power_change_threshold_whole_hem_import': 'Power Change Threshold (Whole HEM Import)',
        'number.home_energy_meter_8_power_percentage_threshold_clamp_1_export': 'Power Percentage Threshold (Clamp 1 Export)',
        'number.home_energy_meter_8_power_percentage_threshold_clamp_1_import': 'Power Percentage Threshold (Clamp 1 Import)',
        'number.home_energy_meter_8_power_percentage_threshold_clamp_2_export': 'Power Percentage Threshold (Clamp 2 Export)',
        'number.home_energy_meter_8_power_percentage_threshold_clamp_2_import': 'Power Percentage Threshold (Clamp 2 Import)',
        'number.home_energy_meter_8_power_percentage_threshold_clamp_3_export': 'Power Percentage Threshold (Clamp 3 Export)',
        'number.home_energy_meter_8_power_percentage_threshold_clamp_3_import': 'Power Percentage Threshold (Clamp 3 Import)',
        'number.home_energy_meter_8_power_percentage_threshold_whole_hem_export': 'Power Percentage Threshold (Whole HEM Export)',
        'number.home_energy_meter_8_power_percentage_threshold_whole_hem_import': 'Power Percentage Threshold (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_1_current_clamp_1_export': 'Automatic Report: Group 1 - Current (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_current_clamp_1_import': 'Automatic Report: Group 1 - Current (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_current_clamp_2_export': 'Automatic Report: Group 1 - Current (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_current_clamp_2_import': 'Automatic Report: Group 1 - Current (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_current_clamp_3_export': 'Automatic Report: Group 1 - Current (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_current_clamp_3_import': 'Automatic Report: Group 1 - Current (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_current_whole_hem_export': 'Automatic Report: Group 1 - Current (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_1_current_whole_hem_import': 'Automatic Report: Group 1 - Current (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvah_clamp_1_export': 'Automatic Report: Group 1 - kVAh (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvah_clamp_1_import': 'Automatic Report: Group 1 - kVAh (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvah_clamp_2_export': 'Automatic Report: Group 1 - kVAh (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvah_clamp_2_import': 'Automatic Report: Group 1 - kVAh (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvah_clamp_3_export': 'Automatic Report: Group 1 - kVAh (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvah_clamp_3_import': 'Automatic Report: Group 1 - kVAh (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvah_whole_hem_export': 'Automatic Report: Group 1 - kVAh (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvah_whole_hem_import': 'Automatic Report: Group 1 - kVAh (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvar_clamp_1_export': 'Automatic Report: Group 1 - kVar (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvar_clamp_1_import': 'Automatic Report: Group 1 - kVar (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvar_clamp_2_export': 'Automatic Report: Group 1 - kVar (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvar_clamp_2_import': 'Automatic Report: Group 1 - kVar (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvar_clamp_3_export': 'Automatic Report: Group 1 - kVar (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvar_clamp_3_import': 'Automatic Report: Group 1 - kVar (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvar_whole_hem_export': 'Automatic Report: Group 1 - kVar (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvar_whole_hem_import': 'Automatic Report: Group 1 - kVar (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvarh_clamp_1_export': 'Automatic Report: Group 1 - kVarh (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvarh_clamp_1_import': 'Automatic Report: Group 1 - kVarh (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvarh_clamp_2_export': 'Automatic Report: Group 1 - kVarh (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvarh_clamp_2_import': 'Automatic Report: Group 1 - kVarh (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvarh_clamp_3_export': 'Automatic Report: Group 1 - kVarh (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvarh_clamp_3_import': 'Automatic Report: Group 1 - kVarh (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kvarh_whole_hem_export': 'Automatic Report: Group 1 - kVarh (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kvarh_whole_hem_import': 'Automatic Report: Group 1 - kVarh (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kwh_clamp_1_export': 'Automatic Report: Group 1 - kWh (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kwh_clamp_1_import': 'Automatic Report: Group 1 - kWh (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kwh_clamp_2_export': 'Automatic Report: Group 1 - kWh (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kwh_clamp_2_import': 'Automatic Report: Group 1 - kWh (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kwh_clamp_3_export': 'Automatic Report: Group 1 - kWh (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kwh_clamp_3_import': 'Automatic Report: Group 1 - kWh (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_kwh_whole_hem_export': 'Automatic Report: Group 1 - kWh (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_1_kwh_whole_hem_import': 'Automatic Report: Group 1 - kWh (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_1_power_clamp_1_export': 'Automatic Report: Group 1 - Power (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_power_clamp_1_import': 'Automatic Report: Group 1 - Power (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_power_clamp_2_export': 'Automatic Report: Group 1 - Power (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_power_clamp_2_import': 'Automatic Report: Group 1 - Power (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_power_clamp_3_export': 'Automatic Report: Group 1 - Power (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_power_clamp_3_import': 'Automatic Report: Group 1 - Power (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_power_factor_clamp_1_export': 'Automatic Report: Group 1 - Power Factor (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_power_factor_clamp_1_import': 'Automatic Report: Group 1 - Power Factor (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_power_factor_clamp_2_export': 'Automatic Report: Group 1 - Power Factor (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_power_factor_clamp_2_import': 'Automatic Report: Group 1 - Power Factor (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_power_factor_clamp_3_export': 'Automatic Report: Group 1 - Power Factor (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_power_factor_clamp_3_import': 'Automatic Report: Group 1 - Power Factor (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_power_factor_whole_hem_export': 'Automatic Report: Group 1 - Power Factor (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_1_power_factor_whole_hem_import': 'Automatic Report: Group 1 - Power Factor (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_1_power_whole_hem_export': 'Automatic Report: Group 1 - Power (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_1_power_whole_hem_import': 'Automatic Report: Group 1 - Power (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_1_voltage_clamp_1_export': 'Automatic Report: Group 1 - Voltage (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_voltage_clamp_1_import': 'Automatic Report: Group 1 - Voltage (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_voltage_clamp_2_export': 'Automatic Report: Group 1 - Voltage (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_1_voltage_clamp_2_import': 'Automatic Report: Group 1 - Voltage (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_voltage_clamp_3_export': 'Automatic Report: Group 1 - Voltage (Clamp 3 Export',
        'select.home_energy_meter_8_automatic_report_group_1_voltage_clamp_3_import': 'Automatic Report: Group 1 - Voltage (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_1_voltage_whole_hem_export': 'Automatic Report: Group 1 - Voltage (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_1_voltage_whole_hem_import': 'Automatic Report: Group 1 - Voltage (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_2_current_clamp_1_export': 'Automatic Report: Group 2 - Current (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_current_clamp_1_import': 'Automatic Report: Group 2 - Current (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_current_clamp_2_export': 'Automatic Report: Group 2 - Current (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_current_clamp_2_import': 'Automatic Report: Group 2 - Current (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_current_clamp_3_export': 'Automatic Report: Group 2 - Current (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_current_clamp_3_import': 'Automatic Report: Group 2 - Current (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_current_whole_hem_export': 'Automatic Report: Group 2 - Current (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_2_current_whole_hem_import': 'Automatic Report: Group 2 - Current (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvah_clamp_1_export': 'Automatic Report: Group 2 - kVAh (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvah_clamp_1_import': 'Automatic Report: Group 2 - kVAh (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvah_clamp_2_export': 'Automatic Report: Group 2 - kVAh (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvah_clamp_2_import': 'Automatic Report: Group 2 - kVAh (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvah_clamp_3_export': 'Automatic Report: Group 2 - kVAh (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvah_clamp_3_import': 'Automatic Report: Group 2 - kVAh (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvah_whole_hem_export': 'Automatic Report: Group 2 - kVAh (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvah_whole_hem_import': 'Automatic Report: Group 2 - kVAh (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvar_clamp_1_export': 'Automatic Report: Group 2 - kVar (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvar_clamp_1_import': 'Automatic Report: Group 2 - kVar (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvar_clamp_2_export': 'Automatic Report: Group 2 - kVar (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvar_clamp_2_import': 'Automatic Report: Group 2 - kVar (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvar_clamp_3_export': 'Automatic Report: Group 2 - kVar (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvar_clamp_3_import': 'Automatic Report: Group 2 - kVar (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvar_whole_hem_export': 'Automatic Report: Group 2 - kVar (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvar_whole_hem_import': 'Automatic Report: Group 2 - kVar (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvarh_clamp_1_export': 'Automatic Report: Group 2 - kVarh (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvarh_clamp_1_import': 'Automatic Report: Group 2 - kVarh (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvarh_clamp_2_export': 'Automatic Report: Group 2 - kVarh (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvarh_clamp_2_import': 'Automatic Report: Group 2 - kVarh (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvarh_clamp_3_export': 'Automatic Report: Group 2 - kVarh (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvarh_clamp_3_import': 'Automatic Report: Group 2 - kVarh (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kvarh_whole_hem_export': 'Automatic Report: Group 2 - kVarh (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kvarh_whole_hem_import': 'Automatic Report: Group 2 - kVarh (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kwh_clamp_1_export': 'Automatic Report: Group 2 - kWh (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kwh_clamp_1_import': 'Automatic Report: Group 2 - kWh (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kwh_clamp_2_export': 'Automatic Report: Group 2 - kWh (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kwh_clamp_2_import': 'Automatic Report: Group 2 - kWh (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kwh_clamp_3_export': 'Automatic Report: Group 2 - kWh (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kwh_clamp_3_import': 'Automatic Report: Group 2 - kWh (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_kwh_whole_hem_export': 'Automatic Report: Group 2 - kWh (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_2_kwh_whole_hem_import': 'Automatic Report: Group 2 - kWh (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_2_power_clamp_1_export': 'Automatic Report: Group 2 - Power (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_power_clamp_1_import': 'Automatic Report: Group 2 - Power (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_power_clamp_2_export': 'Automatic Report: Group 2 - Power (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_power_clamp_2_import': 'Automatic Report: Group 2 - Power (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_power_clamp_3_export': 'Automatic Report: Group 2 - Power (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_power_clamp_3_import': 'Automatic Report: Group 2 - Power (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_power_factor_clamp_1_export': 'Automatic Report: Group 2 - Power Factor (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_power_factor_clamp_1_import': 'Automatic Report: Group 2 - Power Factor (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_power_factor_clamp_2_export': 'Automatic Report: Group 2 - Power Factor (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_power_factor_clamp_2_import': 'Automatic Report: Group 2 - Power Factor (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_power_factor_clamp_3_export': 'Automatic Report: Group 2 - Power Factor (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_power_factor_clamp_3_import': 'Automatic Report: Group 2 - Power Factor (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_power_factor_whole_hem_export': 'Automatic Report: Group 2 - Power Factor (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_2_power_factor_whole_hem_import': 'Automatic Report: Group 2 - Power Factor (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_2_power_whole_hem_export': 'Automatic Report: Group 2 - Power (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_2_power_whole_hem_import': 'Automatic Report: Group 2 - Power (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_2_voltage_clamp_1_export': 'Automatic Report: Group 2 - Voltage (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_voltage_clamp_1_import': 'Automatic Report: Group 2 - Voltage (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_voltage_clamp_2_export': 'Automatic Report: Group 2 - Voltage (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_voltage_clamp_2_import': 'Automatic Report: Group 2 - Voltage (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_voltage_clamp_3_export': 'Automatic Report: Group 2 - Voltage (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_2_voltage_clamp_3_import': 'Automatic Report: Group 2 - Voltage (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_2_voltage_whole_hem_export': 'Automatic Report: Group 2 - Voltage (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_2_voltage_whole_hem_import': 'Automatic Report: Group 2 - Voltage (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_3_current_clamp_1_export': 'Automatic Report: Group 3 - Current (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_current_clamp_1_import': 'Automatic Report: Group 3 - Current (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_current_clamp_2_export': 'Automatic Report: Group 3 - Current (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_current_clamp_2_import': 'Automatic Report: Group 3 - Current (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_current_clamp_3_export': 'Automatic Report: Group 3 - Current (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_current_clamp_3_import': 'Automatic Report: Group 3 - Current (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_current_whole_hem_export': 'Automatic Report: Group 3 - Current (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_3_current_whole_hem_import': 'Automatic Report: Group 3 - Current (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvah_clamp_1_export': 'Automatic Report: Group 3 - kVAh (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvah_clamp_1_import': 'Automatic Report: Group 3 - kVAh (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvah_clamp_2_export': 'Automatic Report: Group 3 - kVAh (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvah_clamp_2_import': 'Automatic Report: Group 3 - kVAh (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvah_clamp_3_export': 'Automatic Report: Group 3 - kVAh (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvah_clamp_3_import': 'Automatic Report: Group 3 - kVAh (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvah_whole_hem_export': 'Automatic Report: Group 3 - kVAh (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvah_whole_hem_import': 'Automatic Report: Group 3 - kVAh (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvar_clamp_1_export': 'Automatic Report: Group 3 - kVar (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvar_clamp_1_import': 'Automatic Report: Group 3 - kVar (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvar_clamp_2_export': 'Automatic Report: Group 3 - kVar (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvar_clamp_2_import': 'Automatic Report: Group 3 - kVar (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvar_clamp_3_export': 'Automatic Report: Group 3 - kVar (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvar_clamp_3_import': 'Automatic Report: Group 3 - kVar (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvar_whole_hem_export': 'Automatic Report: Group 3 - kVar (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvar_whole_hem_import': 'Automatic Report: Group 3 - kVar (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvarh_clamp_1_export': 'Automatic Report: Group 3 - kVarh (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvarh_clamp_1_import': 'Automatic Report: Group 3 - kVarh (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvarh_clamp_2_export': 'Automatic Report: Group 3 - kVarh (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvarh_clamp_2_import': 'Automatic Report: Group 3 - kVarh (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvarh_clamp_3_export': 'Automatic Report: Group 3 - kVarh (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvarh_clamp_3_import': 'Automatic Report: Group 3 - kVarh (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kvarh_whole_hem_export': 'Automatic Report: Group 3 - kVarh (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kvarh_whole_hem_import': 'Automatic Report: Group 3 - kVarh (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kwh_clamp_1_export': 'Automatic Report: Group 3 - kWh (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kwh_clamp_1_import': 'Automatic Report: Group 3 - kWh (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kwh_clamp_2_export': 'Automatic Report: Group 3 - kWh (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kwh_clamp_2_import': 'Automatic Report: Group 3 - kWh (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kwh_clamp_3_export': 'Automatic Report: Group 3 - kWh (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kwh_clamp_3_import': 'Automatic Report: Group 3 - kWh (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_kwh_whole_hem_export': 'Automatic Report: Group 3 - kWh (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_3_kwh_whole_hem_import': 'Automatic Report: Group 3 - kWh (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_3_power_clamp_1_export': 'Automatic Report: Group 3 - Power (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_power_clamp_1_import': 'Automatic Report: Group 3 - Power (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_power_clamp_2_export': 'Automatic Report: Group 3 - Power (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_power_clamp_2_import': 'Automatic Report: Group 3 - Power (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_power_clamp_3_export': 'Automatic Report: Group 3 - Power (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_power_clamp_3_import': 'Automatic Report: Group 3 - Power (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_power_factor_clamp_1_export': 'Automatic Report: Group 3 - Power Factor (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_power_factor_clamp_1_import': 'Automatic Report: Group 3 - Power Factor (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_power_factor_clamp_2_export': 'Automatic Report: Group 3 - Power Factor (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_power_factor_clamp_2_import': 'Automatic Report: Group 3 - Power Factor (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_power_factor_clamp_3_export': 'Automatic Report: Group 3 - Power Factor (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_power_factor_clamp_3_import': 'Automatic Report: Group 3 - Power Factor (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_power_factor_whole_hem_export': 'Automatic Report: Group 3 - Power Factor (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_3_power_factor_whole_hem_import': 'Automatic Report: Group 3 - Power Factor (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_3_power_whole_hem_export': 'Automatic Report: Group 3 - Power (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_3_power_whole_hem_import': 'Automatic Report: Group 3 - Power (Whole HEM Import)',
        'select.home_energy_meter_8_automatic_report_group_3_voltage_clamp_1_export': 'Automatic Report: Group 3 - Voltage (Clamp 1 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_voltage_clamp_1_import': 'Automatic Report: Group 3 - Voltage (Clamp 1 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_voltage_clamp_2_export': 'Automatic Report: Group 3 - Voltage (Clamp 2 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_voltage_clamp_2_import': 'Automatic Report: Group 3 - Voltage (Clamp 2 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_voltage_clamp_3_export': 'Automatic Report: Group 3 - Voltage (Clamp 3 Export)',
        'select.home_energy_meter_8_automatic_report_group_3_voltage_clamp_3_import': 'Automatic Report: Group 3 - Voltage (Clamp 3 Import)',
        'select.home_energy_meter_8_automatic_report_group_3_voltage_whole_hem_export': 'Automatic Report: Group 3 - Voltage (Whole HEM Export)',
        'select.home_energy_meter_8_automatic_report_group_3_voltage_whole_hem_import': 'Automatic Report: Group 3 - Voltage (Whole HEM Import)',
        'select.home_energy_meter_8_lock_configuration': 'Lock Configuration',
        'select.home_energy_meter_8_selective_reporting': 'Selective Reporting',
        'sensor.home_energy_meter_8_commands_dropped_rx': 'Commands dropped (RX)',
        'sensor.home_energy_meter_8_commands_dropped_tx': 'Commands dropped (TX)',
        'sensor.home_energy_meter_8_electric_consumption_a': 'Electric Consumption [A]',
        'sensor.home_energy_meter_8_electric_consumption_a_3': 'Electric Consumption [A] (3)',
        'sensor.home_energy_meter_8_electric_consumption_a_5': 'Electric Consumption [A] (5)',
        'sensor.home_energy_meter_8_electric_consumption_a_7': 'Electric Consumption [A] (7)',
        'sensor.home_energy_meter_8_electric_consumption_kvah': 'Electric Consumption [kVAh]',
        'sensor.home_energy_meter_8_electric_consumption_kvah_3': 'Electric Consumption [kVAh] (3)',
        'sensor.home_energy_meter_8_electric_consumption_kvah_5': 'Electric Consumption [kVAh] (5)',
        'sensor.home_energy_meter_8_electric_consumption_kvah_7': 'Electric Consumption [kVAh] (7)',
        'sensor.home_energy_meter_8_electric_consumption_kvar': 'Electric Consumption [kVar]',
        'sensor.home_energy_meter_8_electric_consumption_kvar_3': 'Electric Consumption [kVar] (3)',
        'sensor.home_energy_meter_8_electric_consumption_kvar_5': 'Electric Consumption [kVar] (5)',
        'sensor.home_energy_meter_8_electric_consumption_kvar_7': 'Electric Consumption [kVar] (7)',
        'sensor.home_energy_meter_8_electric_consumption_kvarh': 'Electric Consumption [kVarh]',
        'sensor.home_energy_meter_8_electric_consumption_kvarh_3': 'Electric Consumption [kVarh] (3)',
        'sensor.home_energy_meter_8_electric_consumption_kvarh_5': 'Electric Consumption [kVarh] (5)',
        'sensor.home_energy_meter_8_electric_consumption_kvarh_7': 'Electric Consumption [kVarh] (7)',
        'sensor.home_energy_meter_8_electric_consumption_kwh': 'Electric Consumption [kWh]',
        'sensor.home_energy_meter_8_electric_consumption_kwh_3': 'Electric Consumption [kWh] (3)',
        'sensor.home_energy_meter_8_electric_consumption_kwh_5': 'Electric Consumption [kWh] (5)',
        'sensor.home_energy_meter_8_electric_consumption_kwh_7': 'Electric Consumption [kWh] (7)',
        'sensor.home_energy_meter_8_electric_consumption_kwh_9': 'Electric Consumption [kWh] (9)',
        'sensor.home_energy_meter_8_electric_consumption_power_factor': 'Electric Consumption [Power Factor]',
        'sensor.home_energy_meter_8_electric_consumption_power_factor_3': 'Electric Consumption [Power Factor] (3)',
        'sensor.home_energy_meter_8_electric_consumption_power_factor_5': 'Electric Consumption [Power Factor] (5)',
        'sensor.home_energy_meter_8_electric_consumption_power_factor_7': 'Electric Consumption [Power Factor] (7)',
        'sensor.home_energy_meter_8_electric_consumption_v': 'Electric Consumption [V]',
        'sensor.home_energy_meter_8_electric_consumption_v_3': 'Electric Consumption [V] (3)',
        'sensor.home_energy_meter_8_electric_consumption_v_5': 'Electric Consumption [V] (5)',
        'sensor.home_energy_meter_8_electric_consumption_v_7': 'Electric Consumption [V] (7)',
        'sensor.home_energy_meter_8_electric_consumption_w': 'Electric Consumption [W]',
        'sensor.home_energy_meter_8_electric_consumption_w_3': 'Electric Consumption [W] (3)',
        'sensor.home_energy_meter_8_electric_consumption_w_5': 'Electric Consumption [W] (5)',
        'sensor.home_energy_meter_8_electric_consumption_w_7': 'Electric Consumption [W] (7)',
        'sensor.home_energy_meter_8_electric_consumption_w_9': 'Electric Consumption [W] (9)',
        'sensor.home_energy_meter_8_electric_production_a': 'Electric Production [A]',
        'sensor.home_energy_meter_8_electric_production_a_4': 'Electric Production [A] (4)',
        'sensor.home_energy_meter_8_electric_production_a_6': 'Electric Production [A] (6)',
        'sensor.home_energy_meter_8_electric_production_a_8': 'Electric Production [A] (8)',
        'sensor.home_energy_meter_8_electric_production_kvah': 'Electric Production [kVAh]',
        'sensor.home_energy_meter_8_electric_production_kvah_4': 'Electric Production [kVAh] (4)',
        'sensor.home_energy_meter_8_electric_production_kvah_6': 'Electric Production [kVAh] (6)',
        'sensor.home_energy_meter_8_electric_production_kvah_8': 'Electric Production [kVAh] (8)',
        'sensor.home_energy_meter_8_electric_production_kvar': 'Electric Production [kVar]',
        'sensor.home_energy_meter_8_electric_production_kvar_4': 'Electric Production [kVar] (4)',
        'sensor.home_energy_meter_8_electric_production_kvar_6': 'Electric Production [kVar] (6)',
        'sensor.home_energy_meter_8_electric_production_kvar_8': 'Electric Production [kVar] (8)',
        'sensor.home_energy_meter_8_electric_production_kvarh': 'Electric Production [kVarh]',
        'sensor.home_energy_meter_8_electric_production_kvarh_4': 'Electric Production [kVarh] (4)',
        'sensor.home_energy_meter_8_electric_production_kvarh_6': 'Electric Production [kVarh] (6)',
        'sensor.home_energy_meter_8_electric_production_kvarh_8': 'Electric Production [kVarh] (8)',
        'sensor.home_energy_meter_8_electric_production_kwh': 'Electric Production [kWh]',
        'sensor.home_energy_meter_8_electric_production_kwh_10': 'Electric Production [kWh] (10)',
        'sensor.home_energy_meter_8_electric_production_kwh_4': 'Electric Production [kWh] (4)',
        'sensor.home_energy_meter_8_electric_production_kwh_6': 'Electric Production [kWh] (6)',
        'sensor.home_energy_meter_8_electric_production_kwh_8': 'Electric Production [kWh] (8)',
        'sensor.home_energy_meter_8_electric_production_power_factor': 'Electric Production [Power Factor]',
        'sensor.home_energy_meter_8_electric_production_power_factor_4': 'Electric Production [Power Factor] (4)',
        'sensor.home_energy_meter_8_electric_production_power_factor_6': 'Electric Production [Power Factor] (6)',
        'sensor.home_energy_meter_8_electric_production_power_factor_8': 'Electric Production [Power Factor] (8)',
        'sensor.home_energy_meter_8_electric_production_v': 'Electric Production [V]',
        'sensor.home_energy_meter_8_electric_production_v_4': 'Electric Production [V] (4)',
        'sensor.home_energy_meter_8_electric_production_v_6': 'Electric Production [V] (6)',
        'sensor.home_energy_meter_8_electric_production_v_8': 'Electric Production [V] (8)',
        'sensor.home_energy_meter_8_electric_production_w': 'Electric Production [W]',
        'sensor.home_energy_meter_8_electric_production_w_10': 'Electric Production [W] (10)',
        'sensor.home_energy_meter_8_electric_production_w_4': 'Electric Production [W] (4)',
        'sensor.home_energy_meter_8_electric_production_w_6': 'Electric Production [W] (6)',
        'sensor.home_energy_meter_8_electric_production_w_8': 'Electric Production [W] (8)',
        'sensor.home_energy_meter_8_last_seen': 'Last seen',
        'sensor.home_energy_meter_8_node_status': 'Node status',
        'sensor.home_energy_meter_8_round_trip_time': 'Round trip time',
        'sensor.home_energy_meter_8_signal_strength': 'Signal strength',
        'sensor.home_energy_meter_8_successful_commands_rx': 'Successful commands (RX)',
        'sensor.home_energy_meter_8_successful_commands_tx': 'Successful commands (TX)',
        'sensor.home_energy_meter_8_timed_out_responses': 'Timed out responses',
        'switch.home_energy_meter_8_enable_root_device_report': 'Enable root device report',
        'update.home_energy_meter_8_firmware': 'Firmware',
      }),
      'name': 'Home Energy Meter 8',
    }),
  })
# ---
# name: test_device_tree[fibaro_fgr223]
  dict({
    '3245146787-10': dict({
      'children': dict({
      }),
      'entities': dict({
        'binary_sensor.test_location_fgr_223_test_cover_over_current_detected': 'Over-current detected',
        'binary_sensor.test_location_fgr_223_test_cover_system_hardware_failure_with_failure_code': 'System hardware failure (with failure code)',
        'button.test_location_fgr_223_test_cover_idle_power_management_over_current_status': 'Idle Power Management Over-current status',
        'button.test_location_fgr_223_test_cover_idle_system_hardware_status': 'Idle System Hardware status',
        'button.test_location_fgr_223_test_cover_ping': 'Ping',
        'button.test_location_fgr_223_test_cover_reset_accumulated_values': 'Reset accumulated values',
        'cover.test_location_fgr_223_test_cover': '',
        'cover.test_location_fgr_223_test_cover_2': '(2)',
        'number.test_location_fgr_223_test_cover_alarm_1_event_state_parameters': 'Alarm #1: Event/State Parameters',
        'number.test_location_fgr_223_test_cover_alarm_1_notification_status': 'Alarm #1: Notification Status',
        'number.test_location_fgr_223_test_cover_alarm_1_notification_type': 'Alarm #1: Notification Type',
        'number.test_location_fgr_223_test_cover_alarm_2_event_state_parameters': 'Alarm #2: Event/State Parameters',
        'number.test_location_fgr_223_test_cover_alarm_2_notification_status': 'Alarm #2: Notification Status',
        'number.test_location_fgr_223_test_cover_alarm_2_notification_type': 'Alarm #2: Notification Type',
        'number.test_location_fgr_223_test_cover_alarm_3_event_state_parameters': 'Alarm #3: Event/State Parameters',
        'number.test_location_fgr_223_test_cover_alarm_3_notification_status': 'Alarm #3: Notification Status',
        'number.test_location_fgr_223_test_cover_alarm_3_notification_type': 'Alarm #3: Notification Type',
        'number.test_location_fgr_223_test_cover_alarm_4_event_state_parameters': 'Alarm #4: Event/State Parameters',
        'number.test_location_fgr_223_test_cover_alarm_4_notification_status': 'Alarm #4: Notification Status',
        'number.test_location_fgr_223_test_cover_alarm_4_notification_type': 'Alarm #4: Notification Type',
        'number.test_location_fgr_223_test_cover_alarm_5_event_state_parameters': 'Alarm #5: Event/State Parameters',
        'number.test_location_fgr_223_test_cover_alarm_5_notification_status': 'Alarm #5: Notification Status',
        'number.test_location_fgr_223_test_cover_alarm_5_notification_type': 'Alarm #5: Notification Type',
        'number.test_location_fgr_223_test_cover_delay_motor_stop': 'Delay motor stop',
        'number.test_location_fgr_223_test_cover_energy_reports_on_change': 'Energy reports - on change',
        'number.test_location_fgr_223_test_cover_energy_reports_periodic': 'Energy reports - periodic',
        'number.test_location_fgr_223_test_cover_motor_operation_detection': 'Motor operation detection',
        'number.test_location_fgr_223_test_cover_power_reports_on_change': 'Power reports - on change',
        'number.test_location_fgr_223_test_cover_power_reports_periodic': 'Power reports - periodic',
        'number.test_location_fgr_223_test_cover_time_of_down_movement': 'Time of down movement',
        'number.test_location_fgr_223_test_cover_time_of_up_movement': 'Time of up movement',
        'number.test_location_fgr_223_test_cover_venetian_blind_time_of_full_turn_of_the_slats': 'Venetian blind - time of full turn of the slats',
        'select.test_location_fgr_223_test_cover_alarm_1_action': 'Alarm #1: Action',
        'select.test_location_fgr_223_test_cover_alarm_2_action': 'Alarm #2: Action',
        'select.test_location_fgr_223_test_cover_alarm_3_action': 'Alarm #3: Action',
        'select.test_location_fgr_223_test_cover_alarm_4_action': 'Alarm #4: Action',
        'select.test_location_fgr_223_test_cover_alarm_5_action': 'Alarm #5: Action',
        'select.test_location_fgr_223_test_cover_force_calibration': 'Force calibration',
        'select.test_location_fgr_223_test_cover_inputs_orientation': 'Inputs orientation',
        'select.test_location_fgr_223_test_cover_local_protection_state': 'Local protection state',
        'select.test_location_fgr_223_test_cover_measuring_power_consumed_by_the_device_itself': 'Measuring power consumed by the device itself',
        'select.test_location_fgr_223_test_cover_operating_mode': 'Operating mode',
        'select.test_location_fgr_223_test_cover_outputs_orientation': 'Outputs orientation',
        'select.test_location_fgr_223_test_cover_rf_protection_state': 'RF protection state',
        'select.test_location_fgr_223_test_cover_set_slats_back_to_previous_position': 'Set slats back to previous position',
        'select.test_location_fgr_223_test_cover_switch_type': 'Switch type',
        'sensor.test_location_fgr_223_test_cover_alarm_level': 'Alarm Level',
        'sensor.test_location_fgr_223_test_cover_alarm_type': 'Alarm Type',
        'sensor.test_location_fgr_223_test_cover_commands_dropped_rx': 'Commands dropped (RX)',
        'sensor.test_location_fgr_223_test_cover_commands_dropped_tx': 'Commands dropped (TX)',
        'sensor.test_location_fgr_223_test_cover_electric_consumption_kwh': 'Electric Consumption [kWh]',
        'sensor.test_location_fgr_223_test_cover_electric_consumption_w': 'Electric Consumption [W]',
        'sensor.test_location_fgr_223_test_cover_last_seen': 'Last seen',
        'sensor.test_location_fgr_223_test_cover_node_status': 'Node status',
        'sensor.test_location_fgr_223_test_cover_round_trip_time': 'Round trip time',
        'sensor.test_location_fgr_223_test_cover_signal_strength': 'Signal strength',
        'sensor.test_location_fgr_223_test_cover_successful_commands_rx': 'Successful commands (RX)',
        'sensor.test_location_fgr_223_test_cover_successful_commands_tx': 'Successful commands (TX)',
        'sensor.test_location_fgr_223_test_cover_timed_out_responses': 'Timed out responses',
        'switch.test_location_fgr_223_test_cover_s1_scenes_hold_down_release': 'S1 scenes: Hold down / Release',
        'switch.test_location_fgr_223_test_cover_s1_scenes_pressed_1_time': 'S1 scenes: Pressed 1 time',
        'switch.test_location_fgr_223_test_cover_s1_scenes_pressed_2_times': 'S1 scenes: Pressed 2 times',
        'switch.test_location_fgr_223_test_cover_s1_scenes_pressed_3_time': 'S1 scenes: Pressed 3 time',
        'switch.test_location_fgr_223_test_cover_s2_scenes_hold_down_release': 'S2 scenes: Hold down / Release',
        'switch.test_location_fgr_223_test_cover_s2_scenes_pressed_1_time': 'S2 scenes: Pressed 1 time',
        'switch.test_location_fgr_223_test_cover_s2_scenes_pressed_2_times': 'S2 scenes: Pressed 2 times',
        'switch.test_location_fgr_223_test_cover_s2_scenes_pressed_3_time': 'S2 scenes: Pressed 3 time',
        'update.test_location_fgr_223_test_cover_firmware': 'Firmware',
      }),
      'name': 'fgr 223 test cover',
    }),
  })
# ---
# name: test_device_tree[heatit_z_trm2fx]
  dict({
    '3245146787-26': dict({
      'children': dict({
      }),
      'entities': dict({
        'button.floor_thermostat_ping': 'Ping',
        'climate.floor_thermostat': '',
        'light.floor_thermostat_basic': 'Basic',
        'light.floor_thermostat_basic_3': 'Basic (3)',
        'number.floor_thermostat_air_a2_maximum_temperature_limit_ahi': 'Air (A2) maximum temperature limit (AHi)',
        'number.floor_thermostat_air_a2_minimum_temperature_limit_alo': 'Air (A2) minimum temperature limit (ALo)',
        'number.floor_thermostat_button_brightness_active_state': 'Button brightness - active state',
        'number.floor_thermostat_button_brightness_dimmed_state': 'Button brightness - dimmed state',
        'number.floor_thermostat_cooling_setpoint_cool': 'Cooling setpoint (COOL)',
        'number.floor_thermostat_display_brightness_active_state': 'Display brightness - active state',
        'number.floor_thermostat_display_brightness_dimmed_state': 'Display brightness - dimmed state',
        'number.floor_thermostat_energy_saving_mode_setpoint_eco': 'Energy saving mode setpoint (ECO)',
        'number.floor_thermostat_external_sensor_calibration': 'External sensor calibration',
        'number.floor_thermostat_floor_maximum_temperature_fhi': 'Floor maximum temperature (FHi)',
        'number.floor_thermostat_floor_minimum_temperature_limit_flo': 'Floor minimum temperature limit (FLo)',
        'number.floor_thermostat_floor_sensor_calibration': 'Floor sensor calibration',
        'number.floor_thermostat_heating_mode_setpoint_co': 'Heating mode setpoint (CO)',
        'number.floor_thermostat_meter_report_delta_value': 'Meter report delta value',
        'number.floor_thermostat_meter_report_interval': 'Meter report interval',
        'number.floor_thermostat_temperature_control_hysteresis_diff_i': 'Temperature control hysteresis (DIFF I)',
        'number.floor_thermostat_temperature_report_hysteresis': 'Temperature report hysteresis',
        'number.floor_thermostat_temperature_report_interval': 'Temperature report interval',
        'select.floor_thermostat_floor_sensor_type': 'Floor sensor type',
        'select.floor_thermostat_operation_mode': 'Operation mode',
        'select.floor_thermostat_sensor_mode': 'Sensor mode',
        'select.floor_thermostat_temperature_display': 'Temperature display',
        'sensor.floor_thermostat_air_temperature': 'Air temperature',
        'sensor.floor_thermostat_air_temperature_3': 'Air temperature (3)',
        'sensor.floor_thermostat_commands_dropped_rx': 'Commands dropped (RX)',
        'sensor.floor_thermostat_commands_dropped_tx': 'Commands dropped (TX)',
        'sensor.floor_thermostat_electric_consumed_kwh': 'Electric Consumed [kWh]',
        'sensor.floor_thermostat_electric_consumed_v': 'Electric Consumed [V]',
        'sensor.floor_thermostat_electric_consumed_w': 'Electric Consumed [W]',
        'sensor.floor_thermostat_last_seen': 'Last seen',
        'sensor.floor_thermostat_node_status': 'Node status',
        'sensor.floor_thermostat_round_trip_time': 'Round trip time',
        'sensor.floor_thermostat_signal_strength': 'Signal strength',
        'sensor.floor_thermostat_successful_commands_rx': 'Successful commands (RX)',
        'sensor.floor_thermostat_successful_commands_tx': 'Successful commands (TX)',
        'sensor.floor_thermostat_timed_out_responses': 'Timed out responses',
        'switch.floor_thermostat': '',
        'update.floor_thermostat_firmware': 'Firmware',
      }),
      'name': 'Floor thermostat',
    }),
  })
# ---
# name: test_device_tree[heatit_z_trm3]
  dict({
    '3245146787-24': dict({
      'children': dict({
      }),
      'entities': dict({
        'button.floor_thermostat_ping': 'Ping',
        'climate.floor_thermostat': '',
        'number.floor_thermostat_air_maximum_temperature_limit_ahi': 'Air maximum temperature limit (AHi)',
        'number.floor_thermostat_air_minimum_temperature_limit_alo': 'Air minimum temperature limit (ALo)',
        'number.floor_thermostat_button_brightness_active_state': 'Button brightness - active state',
        'number.floor_thermostat_button_brightness_dimmed_state': 'Button brightness - dimmed state',
        'number.floor_thermostat_display_brightness_active_state': 'Display brightness - active state',
        'number.floor_thermostat_display_brightness_dimmed_state': 'Display brightness - dimmed state',
        'number.floor_thermostat_external_sensor_calibration': 'External sensor calibration',
        'number.floor_thermostat_floor_maximum_temperature_fhi': 'Floor maximum temperature (FHi)',
        'number.floor_thermostat_floor_minimum_temperature_limit_flo': 'Floor minimum temperature limit (FLo)',
        'number.floor_thermostat_floor_sensor_calibration': 'Floor sensor calibration',
        'number.floor_thermostat_meter_report_delta_value': 'Meter report delta value',
        'number.floor_thermostat_meter_report_interval': 'Meter report interval',
        'number.floor_thermostat_room_sensor_calibration': 'Room sensor calibration',
        'number.floor_thermostat_temperature_control_hysteresis_diff_i': 'Temperature control hysteresis (DIFF I)',
        'number.floor_thermostat_temperature_report_hysteresis': 'Temperature report hysteresis',
        'number.floor_thermostat_temperature_report_interval': 'Temperature report interval',
        'select.floor_thermostat_floor_sensor_type': 'Floor sensor type',
        'select.floor_thermostat_sensor_mode': 'Sensor mode',
        'select.floor_thermostat_temperature_display': 'Temperature display',
        'sensor.floor_thermostat_air_temperature': 'Air temperature',
        'sensor.floor_thermostat_air_temperature_3': 'Air temperature (3)',
        'sensor.floor_thermostat_air_temperature_4': 'Air temperature (4)',
        'sensor.floor_thermostat_commands_dropped_rx': 'Commands dropped (RX)',
        'sensor.floor_thermostat_commands_dropped_tx': 'Commands dropped (TX)',
        'sensor.floor_thermostat_last_seen': 'Last seen',
        'sensor.floor_thermostat_node_status': 'Node status',
        'sensor.floor_thermostat_round_trip_time': 'Round trip time',
        'sensor.floor_thermostat_signal_strength': 'Signal strength',
        'sensor.floor_thermostat_successful_commands_rx': 'Successful commands (RX)',
        'sensor.floor_thermostat_successful_commands_tx': 'Successful commands (TX)',
        'sensor.floor_thermostat_timed_out_responses': 'Timed out responses',
        'sensor.floor_thermostat_value_electric_consumed': 'Value (Electric, Consumed)',
      }),
      'name': 'Floor thermostat',
    }),
  })
# ---
# name: test_device_tree[heatit_z_trm6]
  dict({
    '3245146787-101': dict({
      'children': dict({
      }),
      'entities': dict({
        'binary_sensor.floor_thermostat_over_load_detected': 'Over-load detected',
        'binary_sensor.floor_thermostat_overheat_detected': 'Overheat detected',
        'button.floor_thermostat_identify': 'Identify',
        'button.floor_thermostat_idle_heat_alarm_heat_sensor_status': 'Idle Heat Alarm Heat sensor status',
        'button.floor_thermostat_idle_power_management_over_load_status': 'Idle Power Management Over-load status',
        'button.floor_thermostat_ping': 'Ping',
        'button.floor_thermostat_reset_accumulated_values': 'Reset accumulated values',
        'climate.floor_thermostat': '',
        'number.floor_thermostat_active_display_brightness': 'Active Display Brightness',
        'number.floor_thermostat_cooling_setpoint': 'Cooling Setpoint',
        'number.floor_thermostat_eco_setpoint': 'Eco Setpoint',
        'number.floor_thermostat_external_sensor_calibration': 'External Sensor Calibration',
        'number.floor_thermostat_external_sensor_max_temp_limit': 'External Sensor Max Temp Limit',
        'number.floor_thermostat_external_sensor_min_temp_limit': 'External Sensor Min Temp Limit',
        'number.floor_thermostat_floor_sensor_calibration': 'Floor Sensor Calibration',
        'number.floor_thermostat_floor_sensor_max_temp_limit': 'Floor Sensor Max Temp Limit',
        'number.floor_thermostat_floor_sensor_min_temp_limit': 'Floor Sensor Min Temp Limit',
        'number.floor_thermostat_heating_setpoint': 'Heating Setpoint',
        'number.floor_thermostat_indicator_value': 'Indicator value',
        'number.floor_thermostat_internal_sensor_calibration': 'Internal Sensor Calibration',
        'number.floor_thermostat_internal_sensor_max_temp_limit': 'Internal Sensor Max Temp Limit',
        'number.floor_thermostat_internal_sensor_min_temp_limit': 'Internal Sensor Min Temp Limit',
        'number.floor_thermostat_load_power': 'Load Power',
        'number.floor_thermostat_meter_report_interval': 'Meter Report Interval',
        'number.floor_thermostat_power_regulator_active_time': 'Power Regulator Active Time',
        'number.floor_thermostat_standby_display_brightness': 'Standby Display Brightness',
        'number.floor_thermostat_temperature_control_hysteresis': 'Temperature Control Hysteresis',
        'number.floor_thermostat_temperature_report_hysteresis': 'Temperature Report Hysteresis',
        'number.floor_thermostat_temperature_report_interval': 'Temperature Report Interval',
        'number.floor_thermostat_thermostat_state_report_interval': 'Thermostat State Report Interval',
        'number.floor_thermostat_turn_on_delay_after_error': 'Turn On Delay After Error',
        'select.floor_thermostat_external_sensor_resistance': 'External Sensor Resistance',
        'select.floor_thermostat_local_control': 'Local Control',
        'select.floor_thermostat_local_protection_state': 'Local protection state',
        'select.floor_thermostat_open_window_detection': 'Open Window Detection',
        'select.floor_thermostat_operating_mode': 'Operating Mode',
        'select.floor_thermostat_regulation_mode': 'Regulation Mode',
        'select.floor_thermostat_sensor_mode': 'Sensor Mode',
        'select.floor_thermostat_temperature_display': 'Temperature Display',
        'sensor.floor_thermostat_air_temperature': 'Air temperature',
        'sensor.floor_thermostat_air_temperature_3': 'Air temperature (3)',
        'sensor.floor_thermostat_air_temperature_4': 'Air temperature (4)',
        'sensor.floor_thermostat_alarm_level': 'Alarm Level',
        'sensor.floor_thermostat_alarm_type': 'Alarm Type',
        'sensor.floor_thermostat_commands_dropped_rx': 'Commands dropped (RX)',
        'sensor.floor_thermostat_commands_dropped_tx': 'Commands dropped (TX)',
        'sensor.floor_thermostat_electric_consumption_kwh': 'Electric Consumption [kWh]',
        'sensor.floor_thermostat_electric_consumption_w': 'Electric Consumption [W]',
        'sensor.floor_thermostat_last_seen': 'Last seen',
        'sensor.floor_thermostat_node_status': 'Node status',
        'sensor.floor_thermostat_round_trip_time': 'Round trip time',
        'sensor.floor_thermostat_signal_strength': 'Signal strength',
        'sensor.floor_thermostat_successful_commands_rx': 'Successful commands (RX)',
        'sensor.floor_thermostat_successful_commands_tx': 'Successful commands (TX)',
        'sensor.floor_thermostat_timed_out_responses': 'Timed out responses',
        'update.floor_thermostat_firmware': 'Firmware',
      }),
      'name': 'Floor Thermostat',
    }),
  })
# ---
# name: test_device_tree[inovelli_lzw36]
  dict({
    '3245146787-19': dict({
      'children': dict({
      }),
      'entities': dict({
        'button.family_room_combo_ping': 'Ping',
        'button.family_room_combo_reset_accumulated_values': 'Reset accumulated values',
        'fan.family_room_combo_2': '(2)',
        'light.family_room_combo': '',
        'number.family_room_combo_active_power_reports': 'Active Power Reports',
        'number.family_room_combo_auto_off_fan_timer': 'Auto Off Fan Timer',
        'number.family_room_combo_auto_off_light_timer': 'Auto Off Light Timer',
        'number.family_room_combo_default_light_level_local': 'Default Light Level (Local)',
        'number.family_room_combo_default_light_level_z_wave': 'Default Light Level (Z-Wave)',
        'number.family_room_combo_energy_reports': 'Energy Reports',
        'number.family_room_combo_fan_led_indicator_color': 'Fan LED Indicator Color',
        'number.family_room_combo_fan_led_strip_effect_color': 'Fan LED Strip Effect Color',
        'number.family_room_combo_fan_led_strip_effect_duration': 'Fan LED Strip Effect Duration',
        'number.family_room_combo_fan_led_strip_effect_intensity': 'Fan LED Strip Effect Intensity',
        'number.family_room_combo_fan_led_strip_intensity': 'Fan LED Strip Intensity',
        'number.family_room_combo_fan_led_strip_intensity_when_off': 'Fan LED Strip Intensity (When OFF)',
        'number.family_room_combo_fan_led_strip_timeout': 'Fan LED Strip Timeout',
        'number.family_room_combo_fan_state_after_power_restored': 'Fan State After Power Restored',
        'number.family_room_combo_light_dimming_speed': 'Light Dimming Speed',
        'number.family_room_combo_light_dimming_speed_from_switch': 'Light Dimming Speed (From Switch)',
        'number.family_room_combo_light_led_indicator_color': 'Light LED Indicator Color',
        'number.family_room_combo_light_led_strip_effect_color': 'Light LED Strip Effect Color',
        'number.family_room_combo_light_led_strip_effect_duration': 'Light LED Strip Effect Duration',
        'number.family_room_combo_light_led_strip_effect_intensity': 'Light LED Strip Effect Intensity',
        'number.family_room_combo_light_led_strip_intensity': 'Light LED Strip Intensity',
        'number.family_room_combo_light_led_strip_intensity_when_off': 'Light LED Strip Intensity (When OFF)',
        'number.family_room_combo_light_led_strip_timeout': 'Light LED Strip Timeout',
        'number.family_room_combo_light_ramp_rate': 'Light Ramp Rate',
        'number.family_room_combo_light_ramp_rate_from_switch': 'Light Ramp Rate (From Switch)',
        'number.family_room_combo_light_state_after_power_restored': 'Light State After Power Restored',
        'number.family_room_combo_maximum_fan_level': 'Maximum Fan Level',
        'number.family_room_combo_maximum_light_level': 'Maximum Light Level',
        'number.family_room_combo_minimum_fan_level': 'Minimum Fan Level',
        'number.family_room_combo_minimum_light_level': 'Minimum Light Level',
        'number.family_room_combo_periodic_power_energy_reports': 'Periodic Power & Energy Reports',
        'select.family_room_combo_default_fan_level_local': 'Default Fan Level (Local)',
        'select.family_room_combo_default_fan_level_z_wave': 'Default Fan Level (Z-Wave)',
        'select.family_room_combo_fan_led_strip_effect': 'Fan LED Strip Effect',
        'select.family_room_combo_instant_on': 'Instant On',
        'select.family_room_combo_light_led_strip_effect': 'Light LED Strip Effect',
        'select.family_room_combo_local_protection': 'Local Protection',
        'select.family_room_combo_local_protection_state': 'Local protection state',
        'select.family_room_combo_rf_protection_state': 'RF protection state',
        'sensor.family_room_combo_commands_dropped_rx': 'Commands dropped (RX)',
        'sensor.family_room_combo_commands_dropped_tx': 'Commands dropped (TX)',
        'sensor.family_room_combo_electric_consumed_kwh': 'Electric Consumed [kWh]',
        'sensor.family_room_combo_electric_consumed_w': 'Electric Consumed [W]',
        'sensor.family_room_combo_last_seen': 'Last seen',
        'sensor.family_room_combo_node_status': 'Node status',
        'sensor.family_room_combo_round_trip_time': 'Round trip time',
        'sensor.family_room_combo_signal_strength': 'Signal strength',
        'sensor.family_room_combo_successful_commands_rx': 'Successful commands (RX)',
        'sensor.family_room_combo_successful_commands_tx': 'Successful commands (TX)',
        'sensor.family_room_combo_timed_out_responses': 'Timed out responses',
        'update.family_room_combo_firmware': 'Firmware',
      }),
      'name': 'family_room_combo',
    }),
  })
# ---
# name: test_device_tree[merten_507801]
  dict({
    '3245146787-41': dict({
      'children': dict({
      }),
      'entities': dict({
        'button.connect_roller_shutter_ping': 'Ping',
        'cover.connect_roller_shutter': '',
        'cover.connect_roller_shutter_2': '(2)',
        'number.connect_roller_shutter_changeover_delay': 'Changeover Delay',
        'number.connect_roller_shutter_travel_time_down_byte_1': 'Travel Time Down, Byte 1',
        'number.connect_roller_shutter_travel_time_down_byte_2': 'Travel Time Down, Byte 2',
        'number.connect_roller_shutter_travel_time_up_byte_1': 'Travel Time Up, Byte 1',
        'number.connect_roller_shutter_travel_time_up_byte_2': 'Travel Time Up, Byte 2',
        'select.connect_roller_shutter_local_protection_state': 'Local protection state',
        'select.connect_roller_shutter_local_protection_state_2': 'Local protection state (2)',
        'select.connect_roller_shutter_rf_protection_state': 'RF protection state',
        'select.connect_roller_shutter_rf_protection_state_2': 'RF protection state (2)',
        'sensor.connect_roller_shutter_commands_dropped_rx': 'Commands dropped (RX)',
        'sensor.connect_roller_shutter_commands_dropped_tx': 'Commands dropped (TX)',
        'sensor.connect_roller_shutter_last_seen': 'Last seen',
        'sensor.connect_roller_shutter_node_status': 'Node status',
        'sensor.connect_roller_shutter_round_trip_time': 'Round trip time',
        'sensor.connect_roller_shutter_signal_strength': 'Signal strength',
        'sensor.connect_roller_shutter_successful_commands_rx': 'Successful commands (RX)',
        'sensor.connect_roller_shutter_successful_commands_tx': 'Successful commands (TX)',
        'sensor.connect_roller_shutter_timed_out_responses': 'Timed out responses',
      }),
      'name': 'Connect Roller Shutter',
    }),
  })
# ---
# name: test_device_tree[shelly_qnsh_001p10]
  dict({
    '3245146787-5': dict({
      'children': dict({
      }),
      'entities': dict({
        'binary_sensor.wave_shutter_over_current_detected': 'Over-current detected',
        'binary_sensor.wave_shutter_over_current_detected_2': 'Over-current detected (2)',
        'binary_sensor.wave_shutter_overheat_detected': 'Overheat detected',
        'binary_sensor.wave_shutter_overheat_detected_2': 'Overheat detected (2)',
        'binary_sensor.wave_shutter_system_hardware_failure': 'System hardware failure',
        'binary_sensor.wave_shutter_system_hardware_failure_2': 'System hardware failure (2)',
        'button.wave_shutter_identify': 'Identify',
        'button.wave_shutter_idle_heat_alarm_heat_sensor_status': 'Idle Heat Alarm Heat sensor status',
        'button.wave_shutter_idle_heat_alarm_heat_sensor_status_2': 'Idle Heat Alarm Heat sensor status (2)',
        'button.wave_shutter_idle_power_management_over_current_status': 'Idle Power Management Over-current status',
        'button.wave_shutter_idle_power_management_over_current_status_2': 'Idle Power Management Over-current status (2)',
        'button.wave_shutter_idle_system_hardware_status': 'Idle System Hardware status',
        'button.wave_shutter_idle_system_hardware_status_2': 'Idle System Hardware status (2)',
        'button.wave_shutter_ping': 'Ping',
        'button.wave_shutter_reset_accumulated_values': 'Reset accumulated values',
        'button.wave_shutter_reset_accumulated_values_2': 'Reset accumulated values (2)',
        'button.wave_shutter_reset_electric': 'Reset (Electric)',
        'button.wave_shutter_reset_electric_2': 'Reset (Electric) (2)',
        'cover.wave_shutter': '',
        'cover.wave_shutter_2': '(2)',
        'number.wave_shutter_alarm_conf_co': 'Alarm conf. - CO',
        'number.wave_shutter_alarm_conf_heat': 'Alarm conf. - Heat',
        'number.wave_shutter_alarm_conf_smoke': 'Alarm conf. - Smoke',
        'number.wave_shutter_alarm_conf_water': 'Alarm conf. - Water',
        'number.wave_shutter_delay_motor_stop': 'Delay Motor Stop',
        'number.wave_shutter_down_time': 'Down time',
        'number.wave_shutter_factory_reset': 'Factory reset',
        'number.wave_shutter_indicator_value': 'Indicator value',
        'number.wave_shutter_motor_moving_time': 'Motor Moving Time',
        'number.wave_shutter_motor_operation_detection': 'Motor Operation Detection',
        'number.wave_shutter_next_move_delay': 'Next move delay',
        'number.wave_shutter_power_change_report_threshold': 'Power Change Report Threshold',
        'number.wave_shutter_power_consumption_measurement_delay': 'Power Consumption Measurement Delay',
        'number.wave_shutter_slats_turning_time_offset': 'Slats turning time offset',
        'number.wave_shutter_up_time': 'Up time',
        'number.wave_shutter_venetian_mode_turning_time': 'Venetian Mode: Turning Time',
        'select.wave_shutter_operating_mode': 'Operating Mode',
        'select.wave_shutter_shutter_calibration': 'Shutter Calibration',
        'select.wave_shutter_sw1_switch_type': 'SW1 Switch Type',
        'select.wave_shutter_swap_inputs': 'Swap Inputs',
        'select.wave_shutter_swap_outputs': 'Swap Outputs',
        'select.wave_shutter_venetian_mode_restore_slats_position_after_moving': 'Venetian Mode: Restore Slats Position After Moving',
        'sensor.wave_shutter_alarm_level': 'Alarm Level',
        'sensor.wave_shutter_alarm_level_2': 'Alarm Level (2)',
        'sensor.wave_shutter_alarm_type': 'Alarm Type',
        'sensor.wave_shutter_alarm_type_2': 'Alarm Type (2)',
        'sensor.wave_shutter_commands_dropped_rx': 'Commands dropped (RX)',
        'sensor.wave_shutter_commands_dropped_tx': 'Commands dropped (TX)',
        'sensor.wave_shutter_electric_consumption_kwh': 'Electric Consumption [kWh]',
        'sensor.wave_shutter_electric_consumption_kwh_2': 'Electric Consumption [kWh] (2)',
        'sensor.wave_shutter_electric_consumption_w': 'Electric Consumption [W]',
        'sensor.wave_shutter_electric_consumption_w_2': 'Electric Consumption [W] (2)',
        'sensor.wave_shutter_last_seen': 'Last seen',
        'sensor.wave_shutter_node_status': 'Node status',
        'sensor.wave_shutter_round_trip_time': 'Round trip time',
        'sensor.wave_shutter_signal_strength': 'Signal strength',
        'sensor.wave_shutter_successful_commands_rx': 'Successful commands (RX)',
        'sensor.wave_shutter_successful_commands_tx': 'Successful commands (TX)',
        'sensor.wave_shutter_timed_out_responses': 'Timed out responses',
        'update.wave_shutter_firmware': 'Firmware',
      }),
      'name': 'Wave Shutter',
    }),
  })
# ---
# name: test_device_tree[vision_zl7432]
  dict({
    '3245146787-7': dict({
      'children': dict({
      }),
      'entities': dict({
        'button.in_wall_dual_relay_switch_ping': 'Ping',
        'light.in_wall_dual_relay_switch_basic': 'Basic',
        'light.in_wall_dual_relay_switch_basic_2': 'Basic (2)',
        'sensor.in_wall_dual_relay_switch_commands_dropped_rx': 'Commands dropped (RX)',
        'sensor.in_wall_dual_relay_switch_commands_dropped_tx': 'Commands dropped (TX)',
        'sensor.in_wall_dual_relay_switch_last_seen': 'Last seen',
        'sensor.in_wall_dual_relay_switch_node_status': 'Node status',
        'sensor.in_wall_dual_relay_switch_round_trip_time': 'Round trip time',
        'sensor.in_wall_dual_relay_switch_signal_strength': 'Signal strength',
        'sensor.in_wall_dual_relay_switch_successful_commands_rx': 'Successful commands (RX)',
        'sensor.in_wall_dual_relay_switch_successful_commands_tx': 'Successful commands (TX)',
        'sensor.in_wall_dual_relay_switch_timed_out_responses': 'Timed out responses',
        'switch.in_wall_dual_relay_switch': '',
        'switch.in_wall_dual_relay_switch_2': '(2)',
      }),
      'name': 'In Wall Dual Relay Switch',
    }),
  })
# ---
